--- a/views/updates.pug
+++ b/views/updates.pug
@@ -1,14 +1,15 @@
 doctype html
-html 
-    head 
-        title= `${title}`
-        meta(name="viewport" content="width=device-width, initial-scale=1")
+html(lang="en")
+    head
+        title #{title}
         link(rel="stylesheet", href="/css/style.css")
-    body    
-        h1 Pets
-        .cards 
-            each pet in data
-                .card 
-                    h2.card__name #{pet.properties.name}
-                    p.card__color #{pet.properties.color}
-                    p.card__legs #{pet.properties.legs}
+    body
+        .form-wrapper
+            p Pet: #{name}
+            p Color: #{color}
+            P Legs: #{legs}
+            form(method="POST")
+                label(for="newVal") New Amount of Legs
+                input(type="number" name="newVal" required)
+                input(type="submit" value="Submit")
+            a(href='/') Return to the homepage
